[gd_scene load_steps=2 format=2]

[ext_resource path="res://Tools/ActivityBrowse.gd" type="Script" id=1]

[node name="ActivityBrowse" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
script = ExtResource( 1 )

[node name="Header" type="PanelContainer" parent="."]
margin_right = 500.0
margin_bottom = 34.0

[node name="HBoxContainer" type="HBoxContainer" parent="Header"]
margin_left = 7.0
margin_top = 7.0
margin_right = 493.0
margin_bottom = 27.0

[node name="DateRangeLabel" type="Label" parent="Header/HBoxContainer"]
margin_top = 3.0
margin_right = 438.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Date through Date"
clip_text = true

[node name="NewerButton" type="Button" parent="Header/HBoxContainer"]
margin_left = 442.0
margin_right = 462.0
margin_bottom = 20.0
disabled = true
text = "<"

[node name="OlderButton" type="Button" parent="Header/HBoxContainer"]
margin_left = 466.0
margin_right = 486.0
margin_bottom = 20.0
text = ">"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_top = 34.0
margin_right = 500.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ActivityList" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 500.0
size_flags_horizontal = 3
